# some-project

./: .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  Makefile  README.md  app.json  babel.config.js  package.json  pyproject.toml  pytest.e2e.ini  tsconfig.json
app/: .eslintrc.json  .gitignore  App.tsx  README.md  app.json  babel.config.js  eas.json  jest-env.d.ts  jest.config.ts  metro.config.js  package.json  tsconfig.json
app/@types/: eva.d.ts  global.d.ts  index.d.ts
app/common/: index.ts  query.ts  vars.ts
app/common/api/: client.spec.ts  client.ts  errors.spec.ts  errors.ts  hooks.ts  index.ts  types.d.ts
app/common/hooks/: index.ts  useComponents.ts
app/common/utils/: cursor.spec.ts  cursor.ts  datetime.spec.ts  datetime.ts  errMessage.ts  index.ts  numbers.spec.ts  numbers.ts
app/src/: defaults.tsx  state.ts
app/src/components/: Error.tsx  ErrorBoundary.tsx  Grid.tsx  (+14 more)
docs/: AlmostPerfectTechStack.md  README.md  docusaurus.config.js  typescript.md
secrets/: README.md  private.pem  public.pem
svc/: __main__.py  app.py  common.py  config.py  conftest.py  exceptions.py  generate_data.py  logger.py  models.py  openapi.py  openapi_test.py  utils.py  utils_test.py  wallet.py  wallet_category.py  wallet_expense_categories.py  wallet_expense_categories_test.py  wallet_messages.py  wallet_test.py
svc/auth/: api.py  api_test.py  backend.py  backend_test.py  oauth_backend.py  oauth_backend_e2e.py  oauth_backend_test.py  utils.py  utils_test.py
svc/models/: __init__.py  common.py  models_test.py  user.py  user_test.py  wallet.py  wallet_test.py
(+46 files in other folders)
