[tool.poetry]
name = "svc"
version = "0.1.0"
description = ""
authors = ["Pritam Soni <23050213+pritamsoni-hsr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "svc"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.990"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
